More Recipes And Recipe Types

--- a/src/main/resources/assets/ideao/lang/en_us.json
+++ b/src/main/resources/assets/ideao/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-  "item.ideao.aquamarine": "Aquamarine"
+  "item.ideao.aquamarine": "Aquamarine",
+  "item.ideao.dowsing_rod.no_valuables": "No Valuables Found"
 }
